syntax = "proto3";

import "google/protobuf/duration.proto";

package callSchedules.messages;
option csharp_namespace = "CallSchedules.Messages";

enum DayOfWeek {
	sunday = 0;
	monday = 1;
	tuesday = 2;
	wednesday = 3;
	thursday = 4;
	friday = 5;
	saturday = 6;
}

message SucceedResponse {
	bool isSucceed = 1;
}

message CallScheduleListItem {
	string id = 1;
	int32 position = 2;
	google.protobuf.Duration startTime = 3;
	google.protobuf.Duration endTime = 4;
}

message GetCallScheduleListRequest {
	string educOrgId = 1;
	DayOfWeek dayOfWeek = 2;
}

message GetCallScheduleListResponse {
	DayOfWeek dayOfWeek = 1;
	repeated CallScheduleListItem listItems = 2;
}

message CreateCallScheduleListItemRequest {
	string educOrgId = 1;
	DayOfWeek dayOfWeek = 2;
	int32 position = 3;
	google.protobuf.Duration startTime = 4;
	google.protobuf.Duration endTime = 5;
}

message UpdateCallScheduleListItemRequest {
	string id = 1;
	int32 position = 2;
	google.protobuf.Duration startTime = 3;
	google.protobuf.Duration endTime = 4;
}

message DeleteCallScheduleListItemRequest {
	string id = 1;
}

