syntax = "proto3";

package scheduleLists.messages;
option csharp_namespace = "ScheduleLists.Messages";

message BooleanValue {
	bool value = 1;
}

message ScheduleList {
	string id = 1;
	DayOfWeek dayOfWeek = 2;
	repeated ScheduleListItem listItems = 3;
}

message ScheduleListItem {
	string id = 1;
	int32 position = 2;
	BooleanValue isOddWeek = 3;
	string discipline = 4;
	string auditorium = 5;
	string teacher = 6;
}

enum DayOfWeek {
	sunday = 0;
	monday = 1;
	tuesday = 2;
	wednesday = 3;
	thursday = 4;
	friday = 5;
	saturday = 6;
}

message GetScheduleListsByGroupIdRequest {
	string groupId = 1;
}

message GetScheduleListsByGroupIdResponse {
	repeated ScheduleList lists = 1;
}

message GetScheduleListByIdRequest {
	string id = 1;
}

message CreateScheduleListRequest {
	string groupId = 1;
	DayOfWeek dayOfWeek = 2;
}

message DeleteScheduleListRequest {
	string id = 1;
}

message SucceedResponse {
	bool isSucceed = 1;
}